Added Javascript funcionality

--- a/cool_pics/index.html
+++ b/cool_pics/index.html
@@ -7,13 +7,15 @@
     <meta name="author" content="Isaac Edwards">
     <title>Cool Pics</title>
     <link rel="stylesheet" href="coolpics.css">
-    <script src="coolpics.js"></script>
+    <script src="coolpics.js" defer></script>
 </head>
 <body>
+    
+      
     <header>
         <h1>Cool Pics 📷</h1>
-        <button>Menu</button>
-        <ul>
+        <button id="menu_button">Menu</button>
+        <ul id="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html"">People</a></li>
             <li><a href="index.html"">Places</a></li>
@@ -28,31 +30,31 @@
         <h2>Current Work</h2>
         <section class="gallery">
             <figure>  
-                <img src="norris-sm.jpeg" alt="picture">
+            <img src="norris-sm.jpeg" alt="picture" class="gallery-image">
             </figure>
             <figure>  
-                <img src="norris-sm.jpeg" alt="picture">
+            <img src="norris-sm.jpeg" alt="picture" class="gallery-image">
             </figure>
             <figure>  
-                <img src="norris-sm.jpeg" alt="picture">
+            <img src="norris-sm.jpeg" alt="picture" class="gallery-image">
             </figure>
             <figure>  
-                <img src="norris-sm.jpeg" alt="picture">
+            <img src="norris-sm.jpeg" alt="picture" class="gallery-image">
             </figure>
             <figure>  
-                <img src="norris-sm.jpeg" alt="picture">
+            <img src="norris-sm.jpeg" alt="picture" class="gallery-image">
             </figure>
             <figure>  
-                <img src="norris-sm.jpeg" alt="picture">
+            <img src="norris-sm.jpeg" alt="picture" class="gallery-image">
             </figure>
             <figure>  
-                <img src="norris-sm.jpeg" alt="picture">
+            <img src="norris-sm.jpeg" alt="picture" class="gallery-image">
             </figure>
             <figure>  
-                <img src="norris-sm.jpeg" alt="picture">
+            <img src="norris-sm.jpeg" alt="picture" class="gallery-image">
             </figure>
             <figure>  
-                <img src="norris-sm.jpeg" alt="picture">
+            <img src="norris-sm.jpeg" alt="picture" class="gallery-image">
             </figure>
         </section>
     </main>
