Updated twitter:card URL

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="A website for healthy and easy recipies!">
     <meta property="og:image" content="images/recipe-book.png">
     <meta property="og:url" content="https://coolmen444.github.io/wdd131/recipes/index.html">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="https://coolmen444.github.io/wdd131/recipes/images/recipe-book.png">
 </head>
 <body>
     <header>
