--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Book</title>
     <link rel="stylesheet" href="recipes.css">
-    <script src= "main.js" defer></script>
+    <script src= "main.js" type="module" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Patrick+Hand&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -30,6 +30,7 @@
         <hr>
     </header>
    <main>
+        <!-- <div class="single-recipe">
         <img src="images/sweet-potato-waffle-md.jpg" alt="waffle-fries-img" class="food-image">
         <aside>
             <div class="tag-container">
@@ -51,6 +52,35 @@
             </span>
             <p class="description">Savory waffles made with Sweet potato with a hint of Ginger'</p>
         </aside>
+    </div>
+
+    <div class="single-recipe">
+        <img src="images/sweet-potato-waffle-md.jpg" alt="waffle-fries-img" class="food-image">
+        <aside>
+            <div class="tag-container">
+                <div class="tag">Waffles</div>
+                <div class="tag">Sweet Potato</div>
+                <div class="tag">Side</div>
+            </div>  
+            <h2>Sweet Potato Waffles</h2>
+            <span
+                class="rating"
+                role="img"
+                aria-label="Rating: 4 out of 5 stars"
+            >
+                <span aria-hidden="true" class="icon-star">⭐</span>
+                <span aria-hidden="true" class="icon-star">⭐</span>
+                <span aria-hidden="true" class="icon-star">⭐</span>
+                <span aria-hidden="true" class="icon-star-empty">⭐</span>
+                <span aria-hidden="true" class="icon-star-empty">☆</span>
+            </span>
+            <p class="description">Savory waffles made with Sweet potato with a hint of Ginger'</p>
+        </aside>
+    </div> -->
+
+
+    
+
     </main>
    <footer>
         <a href="https://www.flaticon.com/free-icons/recipe" id="attribution" title="recipe icons">Recipe icons created by Freepik - Flaticon</a>
